2002-05-25  Alan Modra  <amodra@bigpond.net.au>

	* chew.c: Use #include "" instead of <> for local header files.

2002-04-20  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2002-02-11  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2002-02-01  Alan Modra  <amodra@bigpond.net.au>

	* chew.c (WORD): Eliminate.

2002-01-31  Ivan Guzvinec  <ivang@opencores.org>

	* Makefile.in: Regenerate.

2002-01-31  Alan Modra  <amodra@bigpond.net.au>

	* chew.c (courierize): Don't modify @command params.

2002-01-30  Nick Clifton  <nickc@cambridge.redhat.com>

	* proto.str (ENUMDOC): Place two spaces between the end of
	the text and the closing comment marker.

2001-10-30  Hans-Peter Nilsson  <hp@bitrange.com>

	* bfdint.texi (BFD target vector miscellaneous): Add
	bfd_target_mmo_flavour.
	* bfd.texinfo (BFD back ends): Add entry for mmo.
	* Makefile.am (DOCFILES): Add mmo.texi.
	(SRCDOC): Add mmo.c.
	(s-mmo, mmo.texi): New rules.

2001-10-29  Kazu Hirata  <kazu@hxi.com>

	* bfdsumm.texi: Fix a typo.

2001-10-26  Nick Clifton  <nickc@cambridge.redhat.com>

	* bfd.texinfo: Change footer to refer to FSF.  Change subtitle
	to refer to original creation date.

2002-01-26  Hans-Peter Nilsson  <hp@bitrange.com>

	* Makefile.am (install): Depend on install-info.
	* Makefile.in: Regenerate.

2001-10-03  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (BFD_H_DEP): Add ../version.h.
	* Makefile.in: Regenerate.

2001-10-02  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2001-10-01  Alan Modra  <amodra@bigpond.net.au>

	* header.sed: New file, adds header to generated files.
	* Makefile.am: Rewrite rules generating libbfd.h, libcoff.h and
	bfd.h, using above.  Add missing elf.c dependecy for libbfd.h.
	* Makefile.in: Regenerate.

2001-09-21  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2001-09-18  Alan Modra  <amodra@bigpond.net.au>

	* bfdint.texi: Replace reference to bfd_read with bfd_bread.