@@ -1,3 +1,9 @@
+2002-06-05  Alan Modra  <amodra@bigpond.net.au>
+
+	* Makefile.am (libbfd.h): Add "Extracted from.." comment.
+	(libcoff.h, bfd.h): Likewise.
+	* Makefile.in: Regenerate.
+
 2002-05-25  Alan Modra  <amodra@bigpond.net.au>
 
 	* chew.c: Use #include "" instead of <> for local header files.
